# stock_broker_app

./: Cargo.toml  build.rs  readme.md
Go/: .env  Dockerfile  Dockerfile.worker  go.mod  models.go  nginx.conf  readme.md
Go/handlers/: historical_data.go  place_trade.go
Go/services/: historical_data_service.go  nats_service.go  place_trade_service.go
Rust/: build.rs  readme.md
Rust/proto/: historical_data.proto
Rust/src/: lib.rs  models.rs
Rust/src/handlers/: historical_data.rs
Rust/src/services/: historical_data_service.rs
proto/: historical_data.proto
src/handlers/: historical_data.rs  place_trade.rs
src/services/: historical_data_service.rs  nats_service.rs  place_trade_service.rs
