[package]
name = "stock_broker_application"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
dotenv = "0.15.0"
tonic = "0.6"
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }
nats = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"


[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"

[[bin]]
name = "place_trade_worker"
path = "src/bin/place_trade_worker.rs"

[[bin]]
name = "historical_data_worker"
path = "src/bin/historical_data_worker.rs"
